<?xml version="1.0"?>
<package format="2">

  <name>youbot_base_driver</name>
  <version>1.0.0</version>
  <description>ROS wrapper for the base of youBot</description>
  <maintainer email="mateusz.przybyla@put.poznan.pl">Mateusz Przybyla</maintainer>
  <author>Mateusz Przybyla</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>tf</depend>
  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>youbot_driver</depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>

</package>
